# nanobot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  funboost_config.py  pyproject.toml  start.sh  start_bg.sh
.claude/: settings.json  settings.local.json
bridge/: package.json
bridge/src/: index.ts  whatsapp.ts
creato/: __init__.py  __main__.py  posthog.py  sentry.py
creato/agent/: __init__.py  events.py  executor.py  loop.py  subagent.py
creato/agents/: __init__.py
creato/api/: __init__.py  server.py
creato/bus/: __init__.py  events.py  queue.py
creato/channels/: __init__.py  base.py  dingtalk.py  discord.py  email.py  feishu.py  manager.py  matrix.py  mochat.py  qq.py  registry.py  slack.py  telegram.py  wecom.py  whatsapp.py
creato/cli/: __init__.py  commands.py
creato/config/: __init__.py  loader.py  paths.py  schema.py
creato/core/: __init__.py  events.py  executor.py  factory.py  loop.py  profile.py  request_context.py
creato/cron/: __init__.py  service.py
creato/dao/: workflow_dao.py
creato/database/: __init__.py  mongo.py  rabbitmq.py  redis.py
creato/heartbeat/: __init__.py  service.py
creato/providers/: __init__.py  azure_openai_provider.py  (+8 more)
docs/: schemas.md
nanobot/: sentry.py
tests/: test_azure_openai_provider.py  test_base_channel.py  test_channel_plugins.py  test_cli_input.py  test_commands.py  test_config_migration.py  test_config_paths.py  test_consolidate_offset.py  test_context_prompt_cache.py  test_cron_service.py  test_cron_tool_list.py  test_custom_provider.py  test_dingtalk_channel.py  test_email_channel.py  test_evaluator.py  test_exec_security.py  test_feishu_markdown_rendering.py  test_feishu_post_content.py  test_feishu_reply.py  test_feishu_table_split.py  test_feishu_tool_hint_code_block.py  test_filesystem_tools.py  test_gemini_thought_signature.py  test_heartbeat_service.py  test_litellm_kwargs.py  test_loop_save_turn.py  test_matrix_channel.py  test_mcp_tool.py  test_memory_consolidation_types.py  test_message_tool.py  test_message_tool_suppress.py  test_mistral_provider.py  test_openai_provider.py  test_provider_retry.py  test_providers_init.py  test_qq_channel.py  test_restart_command.py  test_security_network.py  test_session_manager_history.py  test_skill_creator_scripts.py  (+6 more)
(+187 files in other folders)
