[project]
name = "creato"
version = "0.1.4.post5"
description = "OpenCreator AI workflow assistant"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "OpenCreator"}
]
keywords = ["ai", "agent", "chatbot", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.12.0,<3.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "httpx>=0.28.0,<1.0.0",
    "ddgs>=9.5.5,<10.0.0",
    "oauth-cli-kit>=0.1.3,<1.0.0",
    "loguru>=0.7.3,<1.0.0",
    "readability-lxml>=0.8.4,<1.0.0",
    "mcp>=1.26.0,<2.0.0",
    "json-repair>=0.57.0,<1.0.0",
    "chardet>=3.0.2,<6.0.0",
    "openai>=2.8.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.34.0,<1.0.0",
    "PyJWT[crypto]>=2.9.0,<3.0.0",
    "google-auth>=2.0.0,<3.0.0",
    "google-cloud-aiplatform>=1.0.0,<2.0.0",
    "google-genai>=1.0.0,<2.0.0",
    "tiktoken>=0.12.0,<1.0.0",
    "motor>=3.6.0,<4.0.0",
    "redis>=5.0.0,<6.0.0",
    "aio-pika==6.8.2",
    "networkx==3.4.2",
    "funboost==52.8",
    "nanoid==2.0.0",
    "sentry-sdk[fastapi]>=2.29.0,<3.0.0",
    "posthog>=3.20.0,<4.0.0",
    "mem0ai>=0.1.0",
]

[project.optional-dependencies]
langsmith = [
    "langsmith>=0.1.0",
]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
creato = "creato.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = [
    "creato/**/*.py",
    "creato/agent/skills/**/*.md",
    "creato/agent/skills/**/*.sh",
]

[tool.hatch.build.targets.wheel]
packages = ["creato"]

[tool.hatch.build.targets.wheel.sources]
"creato" = "creato"

[tool.hatch.build.targets.sdist]
include = [
    "creato/",
]


[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
